Changes in 2.2.1:
 * Fix mouse control for Key widget for different zoom levels
 * Correct coordinates shown on bottom of screen for different zoom levels
 * Fix zoom into graph functionality for different zoom levels
 * Fix plot picking for different zoom levels
 * When choosing a text dataset, fix the mini dataset browser

Changes in 2.2:
 * Notify user updates to Veusz are available
 * Add support for high DPI displays
 * Change zoom code scale plots, rather than changing the size of elements,
   so that plots look more similar at different zoom levels
 * Send automatic anonymous feedback to developers giving software version
   information and counts of the features used.
 * Fix colormap sequence and randomize plugins
 * Change hyphen to minus sign when using standard C formatting in tick labels
 * Fix for Chinese and Korean characters in filenames on Windows
 * Sort DatasetPlugin arguments for diffing
 * Fix bitmap EMF export in Python 3
 * The redo operation can now be done multiple times
 * Hide fully transparent objects, rather than trying to draw them
 * Fix bug report script in Python 3
 * Fallback for paint device metrics, fixing bugs when PyQt is older than Qt
 * If barplot positions setting is blank but set, treat as unset

Changes in 2.1.1:
 * Fix dashed/dotted custom lines in EMF output
 * Fix Fields in dataset plugins
 * Fix data import plugins
 * Use deprecated sipconfig if available to find SIP files
 * Fix problems with opening files using command line arguments with
   some encodings
 * Hide splash if program takes too long to start

Changes in 2.1:
 * If file cannot be imported on document load, ask user for a new filename
 * Only open HDF5 files in readonly mode
 * Do not simply log errors when loading data with ImportPlugins
 * Cleanup of stylesheet, setting and widget code
 * Fix filename chooser and embedding in ImageFile widget
 * Force C++11 compilation on Unix
 * Fix document reload, export warning and unsafe loading dialogs