@@ -4,6 +4,7 @@ Changes in 2.2.1:
  * Fix zoom into graph functionality for different zoom levels
  * Fix plot picking for different zoom levels
  * When choosing a text dataset, fix the mini dataset browser
+ * Fix crash when previewing in binary import using Python 3
 
 Changes in 2.2:
  * Notify user updates to Veusz are available
